examples/invalid/example11_parse_bad_def.py
def bad(a: int) int:
    return a
